tests/programs/simple_method.stderr
NameError: object has no method `nonexistent`
at programs/simple_method.re:19:24
at programs/simple_method.re:19:22
ArgumentError: expected `1` args, found `2` args for `<object>.double`
at programs/simple_method.re:20:24
at programs/simple_method.re:20:22
TypeError: 5 is not a Object!
ArgumentError: `@` expected the name of a method as second arg
